--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-dom": "^1.0.2",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "react-tailwindcss-select": "^1.8.5",
     "redux-thunk": "^3.1.0",
     "sweetalert2": "^11.10.3",
     "sweetalert2-react-content": "^5.0.7"
